# rattletrap

./: .codeclimate.yml  .devcontainer.json  .dockerignore  .gitignore  .hindent.yaml  .hlint.yaml  .travis.yml  CHANGELOG.md  Dockerfile  HLint.hs  LICENSE.markdown  LICENSE.txt  README.markdown  README.md  Setup.hs  appveyor.yml  brittany.yaml  cabal.project  compose.yaml  format.hs  hlint-problem-matcher.json  package.yaml  rattletrap.cabal  stack.yaml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  initialize.sh  on-create.sh
.github/: dependabot.yml
.github/workflows/: brittany.yaml  ci.yaml  ci.yml  hlint.yaml  lint.yaml  release.yaml  workflow.yaml
config/: brittany-problem-matcher.json  hlint-problem-matcher.json  hlint.yaml
data/replays/: 1EF90FCC4F719F606A5327B3CDD782A4.replay  A7F001A1417A19BFA8C90990D8F7C2FF.replay  D0449F5F4AA775B86FFA7DA2B5A3204E.replay
docker/: Dockerfile
executable/: Main.hs
executables/: Main.hs
replays/: 000b.replay  00df.replay  0121.replay  029d.replay  0416.replay  0ae9.replay  0ca5.replay  0e76.replay  1205D96C4D819800927791820096CD49.replay  16d5.replay  1AE415514DFC65DCBF8B8391AD35488D.replay  1a12.replay  1d25.replay  1ec9.replay  204c.replay  2066.replay  211466D04B983F5A33CC2FA1D5928672.replay  21a8.replay  22660E3649FC7971E5653692473D4318.replay  29F582C34A65EB34D358A784CBE3C189.replay  2cf8.replay  2cfe.replay  3381.replay  35f6.replay  383e.replay  387F059C47C09E253C875CA990EFD9F2.replay  3EA147DD485B8DD24810689A7A989E44.replay  3abd.replay  3bd0.replay  4050.replay  419a.replay  42f2.replay  43a9.replay  4bc3.replay  504e.replay  5123.replay  520E1BFF468CF6C3C48D1EA85D9C7909.replay  524f.replay  52aa.replay  54ae.replay  (+60 more)
source/test-suite/: Main.hs
source/tests/: Main.hs
src/exe/: Main.hs
src/lib/: Rattletrap.hs
src/lib/Rattletrap/: BitBuilder.hs  BitGet.hs  BitPut.hs  BitString.hs  ByteGet.hs  BytePut.hs  Data.hs  Get.hs  Json.hs  Schema.hs  TextGet.hs  TextPut.hs  Version.hs
src/lib/Rattletrap/Console/: Config.hs  Flag.hs  Main.hs  Mode.hs  Option.hs
src/lib/Rattletrap/Decode/: AppliedDamageAttribute.hs  Attribute.hs  AttributeMapping.hs  AttributeValue.hs  ClubColorsAttribute.hs  Common.hs  CompressedWord.hs  CompressedWordVector.hs  Content.hs  CustomDemolishAttribute.hs  DamageStateAttribute.hs  DemolishAttribute.hs  EnumAttribute.hs  ExplosionAttribute.hs  ExtendedExplosionAttribute.hs  FlaggedByteAttribute.hs  FlaggedIntAttribute.hs  Frame.hs  GameModeAttribute.hs  Header.hs  Initialization.hs  Int32le.hs  Int64Attribute.hs  Int64le.hs  Int8Vector.hs  Int8le.hs  List.hs  LoadoutAttribute.hs  LoadoutsAttribute.hs  LoadoutsOnlineAttribute.hs  LocationAttribute.hs  PartyLeaderAttribute.hs  PickupAttributeNew.hs  PlayerHistoryKeyAttribute.hs  ProductAttribute.hs  Property.hs  PropertyValue.hs  QWordAttribute.hs  Quaternion.hs  RemoteId.hs  (+14 more)
src/lib/Rattletrap/Encode/: AppliedDamageAttribute.hs  Attribute.hs  AttributeMapping.hs  AttributeValue.hs  BooleanAttribute.hs  ByteAttribute.hs  Cache.hs  CamSettingsAttribute.hs  ClassMapping.hs  ClubColorsAttribute.hs  Common.hs  CompressedWord.hs  Content.hs  CustomDemolishAttribute.hs  DamageStateAttribute.hs  DemolishAttribute.hs  DestroyedReplication.hs  Dictionary.hs  EnumAttribute.hs  ExplosionAttribute.hs  ExtendedExplosionAttribute.hs  FlaggedByteAttribute.hs  FlaggedIntAttribute.hs  Float32le.hs  FloatAttribute.hs  Frame.hs  Header.hs  Initialization.hs  Int32le.hs  Int64le.hs  Int8le.hs  IntAttribute.hs  KeyFrame.hs  List.hs  LoadoutAttribute.hs  LoadoutOnlineAttribute.hs  LoadoutsOnlineAttribute.hs  Mark.hs  Message.hs  MusicStingerAttribute.hs  (+27 more)
src/lib/Rattletrap/Exception/: CrcMismatch.hs  Empty.hs  Fail.hs  InvalidComponent.hs  InvalidJson.hs  MissingAttributeLimit.hs  MissingAttributeName.hs  MissingClassName.hs  MissingObjectName.hs  MissingProductName.hs  NotEnoughInput.hs  UnknownActor.hs  UnknownAttribute.hs  UnknownName.hs  UnknownProduct.hs  UnknownProperty.hs  UnknownSystemId.hs
src/lib/Rattletrap/Json/: Array.hs  Boolean.hs  (+8 more)
src/test/: Main.hs
src/util/: check-schema.hs  copy-executable.hs
test/: Lint.hs  Main.hs  Test.hs
test/replays/: 00080014003600090000036E0F65CCEB.replay  07E925B1423653D44CB8B4B2524792C1.replay  0AD21FEE4A512906BEB6C98136AAF49A.replay  1D1DE97D4941C86E43FE0093563DB621.replay  1F3798E540B0C37A946561ABBB3037F9.replay  22BACD794ABE7B92E50E9CBDBD9C59CE.replay  27B6A7B64553F0F685874584F96BAB1B.replay  2F817C8C44859C762980AE85B1862A31.replay  372DBFCA4BDB340E4357B6BD43032802.replay  40D831074157F4C843EA6CBFE0A88140.replay  4126861E477F4A03DE2A4080374D7908.replay  42F0D8DA4FC89AE7B80FCAB7F637A8EA.replay  540DA764423C8FB24EB9D486D982F16F.replay  551CA4D44FF2B86015DE44A6B5790D4C.replay  6688EEE34BFEB3EC3A9E3283098CC712.replay  7BF6073F4614CE0A438994B9A260DA6A.replay  89CBA30E46FA5385BDD35DA4285D4D2E.replay  9364E28E439EF2CE574A78A70D155970.replay  9704208245D7DD851F2FB2BC7DFD9AC3.replay  98E58A904D713F2DE202358E8573265D.replay  A128B3AB45D5A18E3EF9CF93C9576BCE.replay  A6711CE74272B2E663DCC9A200A218E3.replay  B82DDB624C393A4A425E68AB40DC2450.replay  B9318ACC47A5A8C12901F3B0A512CA58.replay  B9F9B87D4A9D0A3D25D4EC91C0401DE2.replay  C14F7E0E4D9B5E6BE9AD5D8ED56B174C.replay  C375E0EC4971B506C51678B465D35AE9.replay  C8372B1345B1803DEF039F815DBD802D.replay  CB5B422A4424262B2877E9A121329EF2.replay  D428F81646A98C25902CE988AE5C14C8.replay  D7FB197A451D69075A0C99A2F49A4053.replay  D81B16A011E6B36958722498A4116624.replay  DCB3A6B94A9DBE46FDE5EAA9B012F6C8.replay  EAE8DADA4BB2DC5422792C9B4A67392D.replay  F299F176491554B11E34AB91CA76B2CE.replay  FDC79DA84DD463D4BCCE6B892829AC88.replay
test/replays/1/: 160CA83E41083BFD8E6315B4BFCA0561.replay  18D6738D415B70B5BE4C299588D3C141.replay  1BC2D01444ACE577D01E988EADD4DFD0.replay
test/replays/C/: C80A9959479CFE51673B3A889D717554.replay
tests/: Main.hs
tools/: attach-binary.hs  attach-binary.ps1  attach-binary.sh  copy-executable.hs  install-github-release.ps1  install-github-release.sh  install-stack.ps1  install-stack.sh  package.yaml  upload-package.hs  upload-package.sh
(+162 files in other folders)
