cabal-version: >= 1.10

name: rattletrap
version: 9.4.1
synopsis: Parse and generate Rocket League replays.
description: Rattletrap parses and generates Rocket League replays.

build-type: Simple
category: Game
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  type: git
  location: https://github.com/tfausak/rattletrap

flag static
  manual: True
  default: False

library
  autogen-modules: Paths_rattletrap
  build-depends:
    base >= 4.14.1 && < 4.15
    , aeson >= 1.5.5 && < 1.6
    , aeson-pretty >= 0.8.8 && < 0.9
    , array >= 0.5.4 && < 0.6
    , binary >= 0.8.8 && < 0.9
    , bytestring >= 0.10.12 && < 0.11
    , caerbannog >= 0.6.0 && < 0.7
    , containers >= 0.6.2 && < 0.7
    , filepath >= 1.4.2 && < 1.5
    , http-client >= 0.6.4 && < 0.8
    , http-client-tls >= 0.3.5 && < 0.4
    , scientific >= 0.3.6 && < 0.4
    , template-haskell >= 2.16.0 && < 2.17
    , text >= 1.2.4 && < 1.3
    , transformers >= 0.5.6 && < 0.6
  default-language: Haskell2010
  exposed-modules:
    Paths_rattletrap
    Rattletrap
    Rattletrap.Console.Main
    Rattletrap.Data
    Rattletrap.Decode.Common
    Rattletrap.Encode.Common
    Rattletrap.Type.AppliedDamageAttribute
    Rattletrap.Type.Attribute
    Rattletrap.Type.AttributeMapping
    Rattletrap.Type.AttributeType
    Rattletrap.Type.AttributeValue
    Rattletrap.Type.BooleanAttribute
    Rattletrap.Type.ByteAttribute
    Rattletrap.Type.Cache
    Rattletrap.Type.CamSettingsAttribute
    Rattletrap.Type.ClassAttributeMap
    Rattletrap.Type.ClassMapping
    Rattletrap.Type.ClubColorsAttribute
    Rattletrap.Type.Common
    Rattletrap.Type.CompressedWord
    Rattletrap.Type.CompressedWordVector
    Rattletrap.Type.Content
    Rattletrap.Type.CustomDemolishAttribute
    Rattletrap.Type.DamageStateAttribute
    Rattletrap.Type.DemolishAttribute
    Rattletrap.Type.DestroyedReplication
    Rattletrap.Type.Dictionary
    Rattletrap.Type.EnumAttribute
    Rattletrap.Type.ExplosionAttribute
    Rattletrap.Type.ExtendedExplosionAttribute
    Rattletrap.Type.FlaggedByteAttribute
    Rattletrap.Type.FlaggedIntAttribute
    Rattletrap.Type.Float32le
    Rattletrap.Type.FloatAttribute
    Rattletrap.Type.Frame
    Rattletrap.Type.GameModeAttribute
    Rattletrap.Type.Header
    Rattletrap.Type.Initialization
    Rattletrap.Type.Int32le
    Rattletrap.Type.Int64Attribute
    Rattletrap.Type.Int64le
    Rattletrap.Type.Int8le
    Rattletrap.Type.Int8Vector
    Rattletrap.Type.IntAttribute
    Rattletrap.Type.KeyFrame
    Rattletrap.Type.List
    Rattletrap.Type.LoadoutAttribute
    Rattletrap.Type.LoadoutOnlineAttribute
    Rattletrap.Type.LoadoutsAttribute
    Rattletrap.Type.LoadoutsOnlineAttribute
    Rattletrap.Type.LocationAttribute
    Rattletrap.Type.Mark
    Rattletrap.Type.Message
    Rattletrap.Type.MusicStingerAttribute
    Rattletrap.Type.PartyLeaderAttribute
    Rattletrap.Type.PickupAttribute
    Rattletrap.Type.PickupAttributeNew
    Rattletrap.Type.PlayerHistoryKeyAttribute
    Rattletrap.Type.PrivateMatchSettingsAttribute
    Rattletrap.Type.ProductAttribute
    Rattletrap.Type.Property
    Rattletrap.Type.PropertyValue
    Rattletrap.Type.Quaternion
    Rattletrap.Type.QWordAttribute
    Rattletrap.Type.RemoteId
    Rattletrap.Type.Replay
    Rattletrap.Type.Replication
    Rattletrap.Type.ReplicationValue
    Rattletrap.Type.ReservationAttribute
    Rattletrap.Type.RigidBodyStateAttribute
    Rattletrap.Type.Rotation
    Rattletrap.Type.Section
    Rattletrap.Type.SpawnedReplication
    Rattletrap.Type.StatEventAttribute
    Rattletrap.Type.Str
    Rattletrap.Type.StringAttribute
    Rattletrap.Type.TeamPaintAttribute
    Rattletrap.Type.TitleAttribute
    Rattletrap.Type.UniqueIdAttribute
    Rattletrap.Type.UpdatedReplication
    Rattletrap.Type.Vector
    Rattletrap.Type.WeldedInfoAttribute
    Rattletrap.Type.Word32le
    Rattletrap.Type.Word64le
    Rattletrap.Type.Word8le
    Rattletrap.Utility.Bytes
    Rattletrap.Utility.Crc
    Rattletrap.Utility.Helper
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: src/lib

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

executable rattletrap
  build-depends:
    base -any
    , rattletrap -any
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: src/exe
  main-is: Main.hs

  if flag(static)
    ld-options: -static

test-suite test
  build-depends:
    base -any
    , bytestring -any
    , filepath -any
    , HUnit >= 1.6.1 && < 1.7
    , rattletrap -any
    , temporary >= 1.3 && < 1.4
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
