cabal-version: 2.0

name: rattletrap
version: 10.0.7
synopsis: Parse and generate Rocket League replays.
description: Rattletrap parses and generates Rocket League replays.

build-type: Simple
category: Game
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  type: git
  location: https://github.com/tfausak/rattletrap

library
  autogen-modules: Paths_rattletrap
  build-depends:
    base >= 4.14.1 && < 4.15
    , aeson >= 1.5.5 && < 1.6
    , aeson-pretty >= 0.8.8 && < 0.9
    , array >= 0.5.4 && < 0.6
    , binary >= 0.8.8 && < 0.9
    , bytestring >= 0.10.12 && < 0.11
    , caerbannog >= 0.6.0 && < 0.7
    , containers >= 0.6.2 && < 0.7
    , filepath >= 1.4.2 && < 1.5
    , http-client >= 0.6.4 && < 0.8
    , http-client-tls >= 0.3.5 && < 0.4
    , text >= 1.2.4 && < 1.3
    , transformers >= 0.5.6 && < 0.6
  default-extensions: NamedFieldPuns
  default-language: Haskell2010
  exposed-modules:
    Paths_rattletrap
    Rattletrap
    Rattletrap.BitGet
    Rattletrap.BitPut
    Rattletrap.ByteGet
    Rattletrap.BytePut
    Rattletrap.Console.Config
    Rattletrap.Console.Flag
    Rattletrap.Console.Main
    Rattletrap.Console.Mode
    Rattletrap.Console.Option
    Rattletrap.Data
    Rattletrap.Get
    Rattletrap.Schema
    Rattletrap.Type.Attribute
    Rattletrap.Type.Attribute.AppliedDamage
    Rattletrap.Type.Attribute.Boolean
    Rattletrap.Type.Attribute.Byte
    Rattletrap.Type.Attribute.CamSettings
    Rattletrap.Type.Attribute.ClubColors
    Rattletrap.Type.Attribute.CustomDemolish
    Rattletrap.Type.Attribute.DamageState
    Rattletrap.Type.Attribute.Demolish
    Rattletrap.Type.Attribute.Enum
    Rattletrap.Type.Attribute.Explosion
    Rattletrap.Type.Attribute.ExtendedExplosion
    Rattletrap.Type.Attribute.FlaggedByte
    Rattletrap.Type.Attribute.FlaggedInt
    Rattletrap.Type.Attribute.Float
    Rattletrap.Type.Attribute.GameMode
    Rattletrap.Type.Attribute.Int
    Rattletrap.Type.Attribute.Int64
    Rattletrap.Type.Attribute.Loadout
    Rattletrap.Type.Attribute.LoadoutOnline
    Rattletrap.Type.Attribute.Loadouts
    Rattletrap.Type.Attribute.LoadoutsOnline
    Rattletrap.Type.Attribute.Location
    Rattletrap.Type.Attribute.MusicStinger
    Rattletrap.Type.Attribute.PartyLeader
    Rattletrap.Type.Attribute.Pickup
    Rattletrap.Type.Attribute.PickupNew
    Rattletrap.Type.Attribute.PlayerHistoryKey
    Rattletrap.Type.Attribute.PrivateMatchSettings
    Rattletrap.Type.Attribute.Product
    Rattletrap.Type.Attribute.ProductValue
    Rattletrap.Type.Attribute.QWord
    Rattletrap.Type.Attribute.Reservation
    Rattletrap.Type.Attribute.RigidBodyState
    Rattletrap.Type.Attribute.StatEvent
    Rattletrap.Type.Attribute.String
    Rattletrap.Type.Attribute.TeamPaint
    Rattletrap.Type.Attribute.Title
    Rattletrap.Type.Attribute.UniqueId
    Rattletrap.Type.Attribute.WeldedInfo
    Rattletrap.Type.AttributeMapping
    Rattletrap.Type.AttributeType
    Rattletrap.Type.AttributeValue
    Rattletrap.Type.Cache
    Rattletrap.Type.ClassAttributeMap
    Rattletrap.Type.ClassMapping
    Rattletrap.Type.CompressedWord
    Rattletrap.Type.CompressedWordVector
    Rattletrap.Type.Content
    Rattletrap.Type.Dictionary
    Rattletrap.Type.F32
    Rattletrap.Type.Frame
    Rattletrap.Type.Header
    Rattletrap.Type.I32
    Rattletrap.Type.I64
    Rattletrap.Type.I8
    Rattletrap.Type.Initialization
    Rattletrap.Type.Int8Vector
    Rattletrap.Type.KeyFrame
    Rattletrap.Type.List
    Rattletrap.Type.Mark
    Rattletrap.Type.Message
    Rattletrap.Type.Property
    Rattletrap.Type.PropertyValue
    Rattletrap.Type.Quaternion
    Rattletrap.Type.RemoteId
    Rattletrap.Type.Replay
    Rattletrap.Type.Replication
    Rattletrap.Type.Replication.Destroyed
    Rattletrap.Type.Replication.Spawned
    Rattletrap.Type.Replication.Updated
    Rattletrap.Type.ReplicationValue
    Rattletrap.Type.Rotation
    Rattletrap.Type.Section
    Rattletrap.Type.Str
    Rattletrap.Type.U32
    Rattletrap.Type.U64
    Rattletrap.Type.U8
    Rattletrap.Type.Vector
    Rattletrap.Type.Version
    Rattletrap.Utility.Bytes
    Rattletrap.Utility.Crc
    Rattletrap.Utility.Helper
    Rattletrap.Utility.Json
    Rattletrap.Utility.Monad
    Rattletrap.Version
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: src/lib

executable rattletrap
  build-depends: base, rattletrap
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: src/exe
  main-is: Main.hs

test-suite test
  build-depends:
    base
    , bytestring
    , filepath
    , HUnit >= 1.6.1 && < 1.7
    , rattletrap
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
