cabal-version: 2.2

name: rattletrap
version: 11.2.9
synopsis: Parse and generate Rocket League replays.
description: Rattletrap parses and generates Rocket League replays.

build-type: Simple
category: Game
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  type: git
  location: https://github.com/tfausak/rattletrap

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>= 4.16.1
  default-extensions: NamedFieldPuns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library

  build-depends: rattletrap
  ghc-options: -rtsopts -threaded

library
  import: library

  autogen-modules: Paths_rattletrap
  build-depends:
    , aeson ^>= 2.0.3
    , aeson-pretty ^>= 0.8.9
    , array ^>= 0.5.4
    , bytestring ^>= 0.11.3.1
    , containers ^>= 0.6.5
    , filepath ^>= 1.4.2
    , http-client ^>= 0.7.11
    , http-client-tls ^>= 0.3.6
    , text ^>= 1.2.5
  exposed-modules:
    Paths_rattletrap
    Rattletrap
    Rattletrap.BitBuilder
    Rattletrap.BitGet
    Rattletrap.BitPut
    Rattletrap.BitString
    Rattletrap.ByteGet
    Rattletrap.BytePut
    Rattletrap.Console.Config
    Rattletrap.Console.Flag
    Rattletrap.Console.Main
    Rattletrap.Console.Mode
    Rattletrap.Console.Option
    Rattletrap.Data
    Rattletrap.Exception.CrcMismatch
    Rattletrap.Exception.Empty
    Rattletrap.Exception.Fail
    Rattletrap.Exception.InvalidComponent
    Rattletrap.Exception.InvalidJson
    Rattletrap.Exception.MissingAttributeLimit
    Rattletrap.Exception.MissingAttributeName
    Rattletrap.Exception.MissingClassName
    Rattletrap.Exception.MissingObjectName
    Rattletrap.Exception.MissingProductName
    Rattletrap.Exception.NotEnoughInput
    Rattletrap.Exception.UnknownActor
    Rattletrap.Exception.UnknownAttribute
    Rattletrap.Exception.UnknownName
    Rattletrap.Exception.UnknownProduct
    Rattletrap.Exception.UnknownProperty
    Rattletrap.Exception.UnknownSystemId
    Rattletrap.Get
    Rattletrap.Schema
    Rattletrap.Type.Attribute
    Rattletrap.Type.Attribute.AppliedDamage
    Rattletrap.Type.Attribute.Boolean
    Rattletrap.Type.Attribute.Byte
    Rattletrap.Type.Attribute.CamSettings
    Rattletrap.Type.Attribute.ClubColors
    Rattletrap.Type.Attribute.CustomDemolish
    Rattletrap.Type.Attribute.DamageState
    Rattletrap.Type.Attribute.Demolish
    Rattletrap.Type.Attribute.Enum
    Rattletrap.Type.Attribute.Explosion
    Rattletrap.Type.Attribute.ExtendedExplosion
    Rattletrap.Type.Attribute.FlaggedByte
    Rattletrap.Type.Attribute.FlaggedInt
    Rattletrap.Type.Attribute.Float
    Rattletrap.Type.Attribute.GameMode
    Rattletrap.Type.Attribute.Int
    Rattletrap.Type.Attribute.Int64
    Rattletrap.Type.Attribute.Loadout
    Rattletrap.Type.Attribute.LoadoutOnline
    Rattletrap.Type.Attribute.Loadouts
    Rattletrap.Type.Attribute.LoadoutsOnline
    Rattletrap.Type.Attribute.Location
    Rattletrap.Type.Attribute.MusicStinger
    Rattletrap.Type.Attribute.PartyLeader
    Rattletrap.Type.Attribute.Pickup
    Rattletrap.Type.Attribute.PickupInfo
    Rattletrap.Type.Attribute.PickupNew
    Rattletrap.Type.Attribute.PlayerHistoryKey
    Rattletrap.Type.Attribute.PrivateMatchSettings
    Rattletrap.Type.Attribute.Product
    Rattletrap.Type.Attribute.ProductValue
    Rattletrap.Type.Attribute.QWord
    Rattletrap.Type.Attribute.RepStatTitle
    Rattletrap.Type.Attribute.Reservation
    Rattletrap.Type.Attribute.RigidBodyState
    Rattletrap.Type.Attribute.Rotation
    Rattletrap.Type.Attribute.StatEvent
    Rattletrap.Type.Attribute.String
    Rattletrap.Type.Attribute.TeamPaint
    Rattletrap.Type.Attribute.Title
    Rattletrap.Type.Attribute.UniqueId
    Rattletrap.Type.Attribute.WeldedInfo
    Rattletrap.Type.AttributeMapping
    Rattletrap.Type.AttributeType
    Rattletrap.Type.AttributeValue
    Rattletrap.Type.Cache
    Rattletrap.Type.ClassAttributeMap
    Rattletrap.Type.ClassMapping
    Rattletrap.Type.CompressedWord
    Rattletrap.Type.CompressedWordVector
    Rattletrap.Type.Content
    Rattletrap.Type.Dictionary
    Rattletrap.Type.F32
    Rattletrap.Type.Frame
    Rattletrap.Type.Header
    Rattletrap.Type.I32
    Rattletrap.Type.I64
    Rattletrap.Type.I8
    Rattletrap.Type.Initialization
    Rattletrap.Type.Int8Vector
    Rattletrap.Type.Keyframe
    Rattletrap.Type.List
    Rattletrap.Type.Mark
    Rattletrap.Type.Message
    Rattletrap.Type.Property
    Rattletrap.Type.Property.Array
    Rattletrap.Type.Property.Bool
    Rattletrap.Type.Property.Byte
    Rattletrap.Type.Property.Float
    Rattletrap.Type.Property.Int
    Rattletrap.Type.Property.Name
    Rattletrap.Type.Property.QWord
    Rattletrap.Type.Property.Str
    Rattletrap.Type.PropertyValue
    Rattletrap.Type.Quaternion
    Rattletrap.Type.RemoteId
    Rattletrap.Type.RemoteId.Epic
    Rattletrap.Type.RemoteId.PlayStation
    Rattletrap.Type.RemoteId.PsyNet
    Rattletrap.Type.RemoteId.QQ
    Rattletrap.Type.RemoteId.Splitscreen
    Rattletrap.Type.RemoteId.Steam
    Rattletrap.Type.RemoteId.Switch
    Rattletrap.Type.RemoteId.Xbox
    Rattletrap.Type.Replay
    Rattletrap.Type.Replication
    Rattletrap.Type.Replication.Destroyed
    Rattletrap.Type.Replication.Spawned
    Rattletrap.Type.Replication.Updated
    Rattletrap.Type.ReplicationValue
    Rattletrap.Type.Rotation
    Rattletrap.Type.Section
    Rattletrap.Type.Str
    Rattletrap.Type.U32
    Rattletrap.Type.U64
    Rattletrap.Type.U8
    Rattletrap.Type.Vector
    Rattletrap.Type.Version
    Rattletrap.Utility.Bytes
    Rattletrap.Utility.Crc
    Rattletrap.Utility.Helper
    Rattletrap.Utility.Json
    Rattletrap.Utility.Monad
    Rattletrap.Version
  hs-source-dirs: src/lib

executable rattletrap
  import: executable

  hs-source-dirs: src/exe
  main-is: Main.hs

test-suite test
  import: executable

  build-depends: bytestring, filepath
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
